# hibro-mcp

./: .gitignore  README.md  README_CN.md  pyproject.toml  pytest.ini  requirements.txt
scripts/: README.md  cleanup_claude_config.py  install.bat  install.sh  setup_claude_config.py  uninstall.bat  uninstall.sh  verify_install.bat
src/hibro/: __init__.py
src/hibro/assistant/: intelligent_assistant.py  proactive_advisor.py  reminder_system.py  workflow_automator.py
src/hibro/backup/: __init__.py  backup_manager.py  migration_manager.py  restore_manager.py
src/hibro/core/: __init__.py  active_task.py  cleanup_scheduler.py  database_watcher.py  event_bus.py  lfu.py  memory_cleaner.py  memory_engine.py  partition.py  threshold_checker.py
src/hibro/guidance/: __init__.py  guidance_manager.py  learning_path.py  tool_recommender.py  usage_hints.py
src/hibro/integrations/: __init__.py  injector.py  listener.py  manager.py  optimizer.py  synchronizer.py
src/hibro/intelligence/: __init__.py  adaptive_scorer.py  behavior_analyzer.py  bilingual_patterns.py  causal_analyzer.py  extractor.py  forgetting.py  knowledge_graph.py  predictive_engine.py  project_scanner.py  project_scanner_tools.py  query_analyzer.py  reasoning_engine.py  recommender.py  scorer.py  similarity.py  trigger_executor.py
src/hibro/interfaces/: __init__.py  automation.py  chat.py  prompts.py
src/hibro/knowledge/: __init__.py  code_query.py  (+6 more)
tests/: test_code_analyzer.py  test_code_query.py  test_code_scan.py  test_file_detector.py  test_file_watcher.py  test_fresh_init.py  test_git_hooks.py  test_graph_storage.py  test_hibro_init.py  test_hibro_xrd.py  test_js_parser.py  test_knowledge_graph.py  test_memory_status.py  test_migration.py  test_python_parser.py  test_session_update.py  test_smart_trigger_cleanup.py  test_summary_generator.py  test_vue_parser.py
(+48 files in other folders)
